apps/mautrix/twitter/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mautrix-twitter
spec:
  replicas: 1
  serviceName: mautrix-twitter
  selector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-twitter
      app.kubernetes.io/name: mautrix-twitter
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mautrix-twitter
        app.kubernetes.io/name: mautrix-twitter
    spec:
      containers:
        - name: mautrix
          image: mautrix
          ports:
            - name: http
              containerPort: 29327
          readinessProbe:
            httpGet:
              path: /_matrix/mau/ready
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 15
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 15
            periodSeconds: 30
            failureThreshold: 10
          startupProbe:
            httpGet:
              path: /_matrix/mau/ready
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 180
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
      securityContext:
        fsGroup: 1337
      volumes:
        - name: config
          secret:
            secretName: mautrix-twitter
        - name: data
          persistentVolumeClaim:
            claimName: mautrix-twitter-data
        - name: rclone-config
          configMap:
            name: mautrix-twitter-rclone
