apps/mautrix/twitter/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautrix-twitter
spec:
  defaultBackend:
    service:
      name: mautrix-twitter
      port:
        name: http
  tls:
    - hosts:
        - matrix-twitter
