apps/mautrix/twitter/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-twitter
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse-proxy
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-twitter
      app.kubernetes.io/name: mautrix-twitter
  policyTypes:
    - Ingress
